# url_shortener

./: .gitignore  LICENSE  Procfile  README.md  docker-compose.yaml
api/: .coveragerc  .gitignore  README.md  db.sqlite3  entrypoint.sh  mypy.ini  pyproject.toml  requirements.txt
api/config/: settings.py  swagger_settings.py  urls.py
api/postman_collections/: URL Shortener Heroku.postman_collection.json  URL Shortener local.postman_collection.json
api/shortener/: admin.py  models.py  serializers.py  urls.py  views.py
api/shortener/migrations/: 0001_initial.py
api/users/: admin.py
api/users/migrations/: 0001_initial.py
envs/: .gitignore  api.default.env  redis.default.env
tools/: docker-compose.yaml
